--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>GTEC</title>
     <link rel="icon" href="./images/favicon.ico" type="image/png" sizes="100x100">
+    <!-- Primary Meta Tags -->
+
+    <meta name="title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
+    <meta name="description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.gtec.com.br/" />
+    <meta property="og:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
+    <meta property="og:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://www.gtec.com.br/" />
+    <meta property="twitter:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
+    <meta property="twitter:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     <header>
         <nav class="navigation">
-            <a href="" class="logo"><img src="./images/GTEC-Logo2.png" alt=""></a>
+            <a href="" class="logo"><img src="./images/GTEC-Logo2.png" alt="Logo GTEC"></a>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-item active">Home</a></li>
                 <li><a href="#about" class="nav-item">Sobre</a></li>
@@ -32,14 +52,14 @@
             <a href="#about">Sobre Nós</a>
         </div>
         <div class="banner_icons">
-            <a href="https://www.instagram.com/gtec_pragas/" target="_blank"><img src="./images/icons/iconInsta.png" alt=""></a>
-            <a href="https://www.facebook.com/profile.php?id=61559024965384" target="_blank"><img src="./images/icons/iconFace.png" alt=""></a>
+            <a href="https://www.instagram.com/gtec_pragas/" target="_blank"><img src="./images/icons/iconInsta.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=61559024965384" target="_blank"><img src="./images/icons/iconFace.png" alt="Facebook"></a>
         </div>
     </section>
     <section class="about_container" id="about">
         <div class="about_1">
             <div class="about_1_image">
-                <img src="./images/aboutimg1.png" alt="" data-anime="bottom">
+                <img src="./images/aboutimg1.png" alt="Foto GTEC1" data-anime="bottom">
             </div>
             <div class="about_1_text">
                 <h3 data-anime="bottom">Sobre a <span class="blue">GTEC</span></h3>
@@ -64,28 +84,28 @@
     <section class="services_container" id="services">
         <div class="services_text">
             <h2 data-anime="bottom">Serviços</h2>
-            <img src="./images/icons/iconService.png" alt="" data-anime="bottom">
+            <img src="./images/icons/iconService.png" alt="Icon Service1" data-anime="bottom">
             <p data-anime="bottom">Soluções Especializadas para Todas as Suas Necessidades de Controle de Pragas</p>
         </div>
         <div class="cards_services">
             <div class="card" data-anime="bottom">
                 <h3 data-anime="bottom">Desinsetização</h3>
-                <img src="./images/icons/iconCard1.png" alt="" data-anime="bottom">
+                <img src="./images/icons/iconCard1.png" alt="Icon Services2" data-anime="bottom">
                 <p data-anime="bottom">Tratamentos para controle de insetos, incluindo formigas, baratas, mosquitos, moscas, aranhas, percevejos, entre outros.</p>
             </div>
             <div class="card" data-anime="bottom">
                 <h3 data-anime="bottom">Desratização</h3>
-                <img src="./images/icons/iconCard2.png"  alt="" data-anime="bottom">
+                <img src="./images/icons/iconCard2.png"  alt="Icon Services3" data-anime="bottom">
                 <p data-anime="bottom">Eliminação de roedores como ratos e camundongos, incluindo inspeção, identificação de pontos de entrada e aplicação de medidas preventivas.</p>
             </div>
             <div class="card" data-anime="bottom">
                 <h3 data-anime="bottom">Descupinização</h3>
-                <img src="./images/icons/iconCard3.png"  alt="" data-anime="bottom">
+                <img src="./images/icons/iconCard3.png"  alt="Icon Services4" data-anime="bottom">
                 <p data-anime="bottom">Controle de cupins, incluindo tratamentos químicos e físicos para eliminar cupins subterrâneos, de madeira seca e de cupins de solo.</p>
             </div>
             <div class="card" data-anime="bottom">
                 <h3 data-anime="bottom">Controle de Pragas Voadores</h3>
-                <img src="./images/icons/iconCard4.png" alt="" data-anime="bottom">
+                <img src="./images/icons/iconCard4.png" alt="Icon Services5" data-anime="bottom">
                 <p data-anime="bottom">Tratamentos específicos para controle de pragas voadoras, como mosquitos, moscas e vespas.</p>
             </div>
         </div>
@@ -109,26 +129,26 @@
     <section class="enemies_container" id="danger">
         <div class="enemies_text">
             <h2 data-anime="bottom">Conheça Seus Inimigos</h2>
-            <img src="./images/icons/iconEnemies.png" alt="" data-anime="bottom">
+            <img src="./images/icons/iconEnemies.png" alt="Icon Enemies Title" data-anime="bottom">
             <p data-anime="bottom">Tipos de Pragas e os Danos que Causam</p>
         </div>
         <div class="enemies_content">
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies1.png" alt="">
+                <img src="./images/Enemies1.png" alt="Icon Enemies1">
                 <h3>Baratas</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> As baratas podem contaminar alimentos, transmitir doenças e causar alergias.</p>
                 <p><span class="blue">Como Lidar:</span> Limpeza frequente, vedação de pontos de entrada, uso de armadilhas e, se necessário, aplicação de inseticidas.</p>
             </div>
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies2.png" alt="">
+                <img src="./images/Enemies2.png" alt="Icon Enemies2">
                 <h3>Ratos</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> Roedores podem causar danos estruturais, contaminar alimentos, transmitir doenças e causar prejuízos financeiros.</p>
                 <p><span class="blue">Como Lidar:</span> Selar buracos e rachaduras, armadilhas, iscas venenosas e, se necessário, contratação de serviços profissionais de controle de pragas.</p>
             </div>
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies3.png" alt="">
+                <img src="./images/Enemies3.png" alt="Icon Enemies3">
                 <h3>Formigas</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> As formigas podem contaminar alimentos, danificar estruturas e causar desconforto.</p>
@@ -137,21 +157,21 @@
         </div>
         <div class="enemies_content">
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies4.png" alt="">
+                <img src="./images/Enemies4.png" alt="Icon Enemies4">
                 <h3>Escorpiões</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> Picadas podem ser venenosas, causando dor intensa e reações alérgicas graves.</p>
                 <p><span class="blue">Como Lidar:</span> Manter o ambiente limpo e organizado, selar rachaduras e buracos, remover pilhas de entulho e contratar um serviço de controle de pragas.</p>
             </div>
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies5.png" alt="">
+                <img src="./images/Enemies5.png" alt="Icon Enemies5">
                 <h3>Carrapatos</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> Podem transmitir doenças graves, como a doença de Lyme.</p>
                 <p><span class="blue">Como Lidar:</span> Evitar áreas infestadas, usar roupas adequadas, aplicar repelente, manter áreas externas limpas e considerar tratamentos de controle de pragas.</p>
             </div>
             <div class="enemies_1" data-anime="bottom">
-                <img src="./images/Enemies6.png" alt="">
+                <img src="./images/Enemies6.png" alt="Icon Enemies6">
                 <h3>Morcegos</h3>
                 <div class="line"></div>
                 <p><span class="red">Danos:</span> Riscos à saúde devido à possibilidade de transmissão de doenças como a raiva.</p>
@@ -163,34 +183,34 @@
     <section class="process_container" id="process">
         <div class="process_text" data-anime="bottom">
             <h2>Processo de Controle de Pragas</h2>
-            <img src="./images/ProcessText.png" alt="">
+            <img src="./images/ProcessText.png" alt="Icon Process Title">
             <p>O controle de pragas é uma tarefa crucial para manter ambientes seguros e saudáveis.</p>
         </div>
         <div class="process_about">
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon1.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon1.png" alt="Icon Process1"></div>
                 <div><h4>Inspeção Inicial</h4><p>A primeira etapa envolve uma inspeção detalhada da propriedade para identificar tipos de pragas, locais de infestação, fontes de alimentação e possíveis pontos de entrada.</p></div>
             </div>
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon2.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon2.png" alt="Icon Process2"></div>
                 <div><h4>Identificação</h4><p>Identificar as espécies de pragas presentes é crucial para escolher os métodos de controle mais eficazes.</p></div>
             </div>
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon3.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon3.png" alt="Icon Process3"></div>
                 <div><h4>Planejamento</h4><p>Baseado na inspeção e identificação, um plano de ação é desenvolvido, selecionando os métodos de tratamento.</p></div>
             </div>
         </div>
         <div class="process_about">
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon4.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon4.png" alt="Icon Process4"></div>
                 <div><h4>Tratamento</h4><p>O tratamento pode incluir a aplicação de pesticidas, armadilhas, barreiras físicas ou métodos alternativos como controle biológico.</p></div>
             </div>
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon5.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon5.png" alt="Icon Process5"></div>
                 <div><h4>Monitoramento</h4><p>Após o tratamento inicial, a propriedade é regularmente monitorada para detectar sinais de retorno das pragas.</p></div>
             </div>
             <div class="process_about_content" data-anime="bottom">
-                <div><img src="./images/icons/ProcessIcon6.png" alt=""></div>
+                <div><img src="./images/icons/ProcessIcon6.png" alt="Icon Process6"></div>
                 <div><h4>Educação do Cliente</h4><p>Informar e educar o cliente sobre práticas de prevenção de pragas e melhorias que podem ser feitas para evitar futuras infestações.</p></div>
             </div>
         </div>
