add line in about

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="about_1_image">
                 <img src="./images/aboutimg1.png" alt="Foto GTEC1" data-anime="bottom">
             </div>
+            <div class="about_1_line" data-anime="bottom"></div> 
             <div class="about_1_text">
                 <h3 data-anime="bottom">Sobre a <span class="blue">GTEC</span></h3>
                 <p data-anime="bottom">Na GTEC Controle de Pragas, nossa missão é proteger o seu lar e o seu negócio contra as ameaças indesejadas das pragas. Com uma equipe dedicada de especialistas em controle de pragas e anos de experiência no setor, estamos empenhados em fornecer soluções eficazes e personalizadas para todas as suas necessidades de controle de pragas.</p>
@@ -74,6 +75,7 @@
                     Seu navegador não suporta vídeo HTML5.
                 </video>
             </div>
+            <div class="about_2_line" data-anime="bottom"></div> 
             <div class="about_2_text">
                 <h3 data-anime="bottom">Nossos <span class="blue">Valores</span></h3>
                 <p data-anime="bottom">Na GTEC, não apenas nos esforçamos para resolver os problemas de pragas imediatos, mas também para educar nossos clientes sobre a prevenção e manutenção a longo prazo. Acreditamos que a informação é a melhor arma contra as pragas, e nosso objetivo é capacitar nossos clientes com o conhecimento e as ferramentas necessárias para manter seus espaços livres de pragas por muitos anos.</p>
