--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>GTEC</title>
     <link rel="icon" href="./images/favicon.ico" type="image/png" sizes="100x100">
-    <!-- Primary Meta Tags -->
-
+   <!-- Primary Meta Tags -->
     <meta name="title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
     <meta name="description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.gtec.com.br/" />
+    <meta property="og:url" content="www.gtecpragas.com.br" />
     <meta property="og:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
     <meta property="og:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
     <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="http://www.gtec.com.br/" />
+    <meta property="twitter:url" content="www.gtecpragas.com.br" />
     <meta property="twitter:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
     <meta property="twitter:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
     <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
