change img meta tag again

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="www.gtecpragas.com.br" />
     <meta property="og:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
     <meta property="og:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
-    <meta property="og:image" content="/images/metatagimg.png" />
+    <meta property="og:image" content="https://gtecpragas.com.br/images/metatagimg.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="www.gtecpragas.com.br" />
     <meta property="twitter:title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
     <meta property="twitter:description" content="Descubra soluções eficazes e especializadas em controle de pragas com a GTEC. Oferecemos serviços profissionais para eliminar insetos, roedores e outras pragas, garantindo um ambiente seguro e saudável para sua família e negócio. Conte com nossa experiência e comprometimento para proteger seu espaço contra infestações." />
-    <meta property="twitter:image" content="/images/metatagimg.png" />
+    <meta property="twitter:image" content="https://gtecpragas.com.br/images/metatagimg.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Google tag (gtag.js) -->
