--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>GTEC</title>
+    <title>GTEC-Controle De Pragas</title>
     <link rel="icon" href="./images/favicon.ico" type="image/png" sizes="100x100">
    <!-- Primary Meta Tags -->
     <meta name="title" content="GTEC Controle de Pragas: Soluções Profissionais para Eliminação de Pragas" />
