add changes in banner

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="banner_text">
             <h1>Proteja seu Lar</h1>
             <h2>Livre-se das Pragas agora!</h2>
-            <a href="#about">Sobre Nós</a>
+            <a  href="https://api.whatsapp.com/send/?phone=5511940788108&text&type=phone_number&app_absent=0" target="_blank">Solicitar Orçamento</a>
         </div>
         <div class="banner_icons">
             <a href="https://www.instagram.com/gtec_pragas/" target="_blank"><img src="./images/icons/iconInsta.png" alt="Instagram"></a>
