--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </script>
 </head>
 <body>
+    <!--
     <header>
         <nav class="navigation">
             <a href="" class="logo"><img src="./images/GTEC-Logo2.png" alt="Logo GTEC"></a>
@@ -134,7 +135,6 @@
                                     <img src="./images/water5.jpeg" alt="Description of Image 5">
                                 </div>
                             </div>
-                            <!-- Add Pagination -->
                             <div class="swiper-pagination"></div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
         <h2 class="title" data-anime="bottom">VEJA COMO PODEMOS TE AJUDAR</h2>
 
         <div class="container">
-            <!-- Área de Descrição -->
+
             <div class="area-container" data-anime="bottom">
                 <h2 class="area-title" id="area-title">DESINSETIZAÇÃO</h2>
                 <h4 class="area-subtitle" id="area-subtitle">Eliminação de Pragas</h4>
@@ -259,7 +259,7 @@
                 <a  href="https://api.whatsapp.com/send/?phone=5511940788108&text&type=phone_number&app_absent=0" target="_blank" class="button">SOLICITAR ORÇAMENTO</a>
             </div>
 
-            <!-- Botões de Seleção -->
+
             <div class="buttons-grid" data-anime="bottom">
                 <button class="selection-button active" data-title="DESINSETIZAÇÃO"
                     data-subtitle="Eliminação de Pragas"
@@ -399,11 +399,12 @@
         </div>
     </section>
 
+
     <footer class="footer">
-        <!-- Políticas de Privacidade -->
+
         <a href="./privacy.html" class="footer-link">Políticas de Privacidade</a>
 
-        <!-- Ícones das redes sociais -->
+
         <div class="social-icons">
             <a href="https://www.instagram.com/gtec_pragas/" target="_blank">
                 <img src="./images/icons/iconInsta.png" alt="Instagram">
@@ -413,16 +414,20 @@
             </a>
         </div>
 
-        <!-- Direitos autorais -->
         <p class="copyright">© 2025 by GTEC. Todos os direitos reservados.</p>
     </footer>
-    
+   
     <div class="whats">
         <a href="https://api.whatsapp.com/send/?phone=5511940788108&text&type=phone_number&app_absent=0" target="_blank">
             <img src="./images/Whatsapp.png" alt="Fale Conosco pelo Whatsapp" title="Fale Conosco pelo Whatsapp">
         </a>
     </div>
+--> 
 
+    <div style="display: flex;align-items: center;justify-content: center;flex-direction: column;height: 100vh;">
+        <h1>404</h1>
+        <h3>NOT FOUND</h3>
+    </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -441,6 +446,7 @@
             });
         });
     </script>
+
     
     <script src="./js/script.js"></script>
 </body>
